<resources>
    <string name="app_name">Biz Services</string>
    <string name="businessName">Biz Services</string>
    <string name="location">Nairobi, Kenya</string>
    <string name="emailAddress">bizcard@gmail.com</string>
    <string name="phoneNumber">+254704407119</string>
    <string name="my_image_description">logo</string>
    <string name="showNextServiceButtonText">View Another Service</string>
    <string name="serviceDetail">Service Detail</string>
    <string name="serviceName">%1$s</string>
    <string name="serviceDescription">%1$s</string>
    <string name="servicePrice">Price KES: %1$d</string>
    <string name="numberOfService">Total Services: %1$d</string>
    <string name="textStyle">bold</string>
    <string name="serviceNameTitle">Service Name</string>
    <string name="serviceDatailTitle">ServiceDetail</string>
    <string name="logo_image">Logo image</string>
</resources>