<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="708dp"
            android:orientation="vertical"
            android:padding="@dimen/mainPadding"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="19dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="157dp"
                        android:layout_height="149dp"
                        android:contentDescription="@string/logo_image"
                        app:srcCompat="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="28dp"
                            android:text="@string/location"
                            android:layout_marginStart="16dp" />

                        <TextView
                            android:id="@+id/businessName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/businessName"
                            android:layout_marginStart="16dp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/emailAddress"
                            android:layout_marginStart="16dp" />

                        <TextView
                            android:id="@+id/phoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/phoneNumber"
                            android:layout_marginStart="16dp" />

                        <TextView
                            android:id="@+id/numberOfService"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/numberOfService"
                            android:layout_marginStart="16dp" />
                    </LinearLayout>

                </LinearLayout>

            </TableRow>

            <TextView
                android:id="@+id/serviceSectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceDetail"
                android:textSize="@dimen/fontSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/serviceNameTitle"
                android:textSize="@dimen/normalFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serviceName"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/serviceDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/serviceDatailTitle"
                android:textSize="@dimen/normalFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceDescription"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:text="@string/serviceDescription"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/servicePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servicePrice"
                android:textStyle="bold" />

            <Button
                android:id="@+id/showNextServiceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/showServiceButtonTopMargin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/showNextServiceButtonText"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>